--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </p>
                 <div class="h-px w-20 bg-slate-300 my-4"></div>
                 <p class="text-lg text-slate-600 leading-relaxed">
-                    Sản phẩm giúp làm sạch da nhờn, hạn chế mụn, mang lại vẻ sáng mịn cho làn da.
+                    Sản phẩm giúp làm sạch da nhờn, hạn chế mụn, mang lại vẻ sáng mịn cho làn da. Số công bố: 280533/25/CBMP-QLD
                 </p>
                 <div class="flex gap-4 pt-4">
                     <a href="#benefits" class="px-8 py-3 bg-slate-800 text-white rounded-lg font-medium hover:bg-slate-700 transition-colors">
@@ -80,7 +80,7 @@
             <div class="md:w-1/2 flex justify-center relative">
                 <!-- Product Image -->
                 <div class="relative w-full max-w-md bg-white rounded-2xl soap-shadow p-4 flex items-center justify-center border border-slate-100">
-                    <img src="xpyk.png" alt="Perubar Soap" class="w-full h-auto rounded-xl object-contain shadow-sm">
+                    <img src="spyk.jpg" alt="Perubar Soap" class="w-full h-auto rounded-xl object-contain shadow-sm">
                     <!-- Decor elements removed for cleaner look -->
                 </div>
             </div>
@@ -93,7 +93,6 @@
             <div class="text-center max-w-3xl mx-auto mb-16">
                 <h2 class="text-3xl font-bold text-slate-900 mb-4">Công Dụng</h2>
                 <div class="w-20 h-1 bg-slate-300 mx-auto rounded-full mb-4"></div>
-                <p class="text-slate-600">Thông tin công dụng theo hồ sơ công bố sản phẩm.</p>
             </div>
 
             <div class="grid md:grid-cols-3 gap-8">
