--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-[120%] h-[120%] border border-orange-200 rounded-full opacity-50"></div>
                     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-[90%] h-[90%] bg-white rounded-full shadow-2xl shadow-orange-100"></div>
                     
-                    <img src="xpyk.png" alt="Perubar Soap Box" class="relative z-10 w-full h-auto object-contain transform hover:scale-105 transition-transform duration-500 drop-shadow-xl">
+                    <img src="spyk.jpg" alt="Perubar Soap Box" class="relative z-10 w-full h-auto object-contain transform hover:scale-105 transition-transform duration-500 drop-shadow-xl">
                 </div>
             </div>
         </div>
@@ -366,4 +366,5 @@
         });
     </script>
 </body>
+
 </html>
